--- a/styles.css
+++ b/styles.css
@@ -7,5 +7,7 @@
 #container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    
+}
+#book-form {
+    display: none;
 }
