--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,40 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    font-size: 2rem;
+    padding: 1.5rem 2rem 1.5rem 2rem;
+    row-gap: 2rem;
+    column-gap: 3rem;
 }
+#container > * {
+    border: .15rem solid rgb(221, 221, 221);
+    padding: 1rem;
+    border-radius: .5rem;
+    box-shadow: 5px 30px 30px rgba(10, 10, 10, 0.2);
+}
+
+#container > div > button {
+    font-size: 1.5rem;
+    padding: .5rem;
+    background-color: rgb(62, 157, 235);
+    color: white;
+    font-weight: bold;
+    border-radius: .5rem;
+    border: .1rem solid gray;
+    margin: 1rem 0 1rem 0;
+}
+#container > div > button:first-of-type {
+    margin-right: .5rem;
+}
+ #container > div > button:last-of-type {
+    background-color: rgb(212, 11, 11);
+ }   
 #book-form {
     display: none;
 }
