Complete styling for index

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,64 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+.input-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 2rem;
+    
+    justify-items: start;
+}
+#show-form-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 0 2rem 0;
+    background-color: rgb(197, 199, 201);
+}
+#add-book {
+    font-size: 2rem;
+    padding: .2rem 1rem .2rem 1rem;
+    background-color: rgb(221, 227, 230);
+    color: black;
+    font-weight: 300;
+    border-radius: 2em;
+}
+#show-form {
+    font-size: 2rem;
+    padding: .2rem 1rem .2rem 1rem;
+    background-color: rgb(221, 227, 230);
+    color: black;
+    font-weight: 300;
+    border-radius: 2em;
+}
+#form-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
+    justify-items: center;
+    row-gap: 2rem;
+    padding-top: 2rem;
+    background-color: rgb(197, 199, 201);
+}
+#book-form {
+    font-size: 2rem;
+}
+#book-form > * {
+    font-size: 1.5rem;
+    margin: 1rem;
+}
+#book-form > input {
+    padding: .25rem .5rem .25rem .5rem;
+}
+#pages {
+    width: 7rem;
+    text-align: right;
+    padding: 0;
+}
+#book-form  > input[type="checkbox"] {
+    transform: scale(2);
+}
 
 #container {
     display: grid;
